feat: add underline effect utility

--- a/main.scss
+++ b/main.scss
@@ -69,6 +69,7 @@ body{
     }
   }
 }
+
 .noSelect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -76,4 +77,56 @@ body{
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+/**
+* Underline Effect
+*/
+.underline{
+  position: relative;
+  input, i{
+    margin-bottom: 1px;
+  }
+  &::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 2px;
+    background-color: #0AF;
+    transition: transform 300ms ease-in-out;
+    transform: scaleX(0);
+  }
+  &:hover::before,
+  &:focus::before {
+    transform: scaleX(1);
+  }
+  &:hover,
+  &:focus{
+    input, i{
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
+    }
+    transform: scaleX(1);
+  }
+}
+
+.underlineFocus{
+  position:relative;
+  input, i{
+    margin-bottom: 1px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+  &::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 2px;
+    background-color: #0AF;
+    transform: scaleX(1);
+  }
 }
