--- a/main.css
+++ b/main.css
@@ -113,4 +113,68 @@ body form div input[name='submit'] {
   -ms-user-select: none;
   user-select: none;
 }
+
+/**
+* Underline Effect
+*/
+.underline {
+  position: relative;
+}
+
+.underline input, .underline i {
+  margin-bottom: 1px;
+}
+
+.underline::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 2px;
+  background-color: #0AF;
+  -webkit-transition: -webkit-transform 300ms ease-in-out;
+  transition: -webkit-transform 300ms ease-in-out;
+  transition: transform 300ms ease-in-out;
+  transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+}
+
+.underline:hover::before, .underline:focus::before {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+.underline:hover, .underline:focus {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+.underline:hover input, .underline:hover i, .underline:focus input, .underline:focus i {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.underlineFocus {
+  position: relative;
+}
+
+.underlineFocus input, .underlineFocus i {
+  margin-bottom: 1px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.underlineFocus::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 2px;
+  background-color: #0AF;
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
 /*# sourceMappingURL=main.css.map */
