--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ body form div input {
   outline: none;
   border: 1px solid #bbb;
   border-radius: 3px;
-  padding: 10px 10px;
+  padding: 10px 10px 9px 10px;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
