--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,5 @@
+// @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
 body, html{
   height: 100vh;
   margin: 0;
@@ -49,6 +51,7 @@ body{
       i{
         display: flex;
         align-items: center;
+        justify-content: center;
         border: 1px solid #bbb;
         padding: 0 10px 0 0;
         background-color: #fff;
@@ -67,8 +70,26 @@ body{
         margin-top: 18px;
       }
     }
+    // display messages
+    #message{
+      display: none;
+    }
+    #message.error,#message.success{
+      display: block;
+      text-align: center;
+      padding: 10px;
+      background-color: #F0F0F0;
+    }
+    #message.error{
+      color: #b71c1c;
+    }
+    #message.success{
+      color: green;
+    }
   }
 }
 
 @import './partials/utils';
 @import './partials/underline';
+@import './partials/form/overlay';
+
