--- a/main.scss
+++ b/main.scss
@@ -91,5 +91,5 @@ body{
 
 @import './partials/utils';
 @import './partials/underline';
-@import './partials/form/overlay';
-
+@import './partials/overlay';
+@import './partials/error';
