refactor: form labels + CSS

--- a/main.scss
+++ b/main.scss
@@ -30,7 +30,7 @@ body{
     flex-direction: column;
     padding: 20px;
     width: 400px;
-    label::before{
+    label::after{
       content: '*';
       color:#b71c1c;
     }
